# CGoL

./: .gitignore  CMakeLists.txt  CMakeLists_gen.txt  LICENSE  README.md  ubuntu-setup.sh
dependencies/include/glad/: glad.h
resources/shaders/: Basic.shader  BasicLinux.shader
src/: Cell.cpp  Cell.h  Grid.cpp  Grid.h  main.cpp
src/graphics/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  VertexArray.cpp  VertexBufferLayout.h
test-cpp/: CMakeLists.txt  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  app  cherno.cpp  glad.c  test.cpp
test-cpp/resources/shaders/: Basic.shader
test-cpp/src/: Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.h  cherno.cpp  imgui.ini
test-cpp/src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
